# femto

./: .gitignore
gateway/: Cargo.toml  Dockerfile  Dockerfile-old  README.md  docker-compose.yaml
gateway/.sqlx/: query-06e0f4ca59e1fa31778beb47be9b523306197239a324fe5da829b951be77c196.json  query-0fa534e088cde788716660e9ec5cf1f9a3dd706fe53093956a2822105983b794.json  query-291f702408d8480f1ff656670bee7102657d0c045c625380794be12c134709ac.json  query-4e586de2608e902b0c1655842e21e9ec1c0344a9b91291c3940885c67e9288c3.json  query-7d33068fabf6e88d11b3fee43df28235185d56a498445c73b257efe0988c8318.json  query-9bca48a5d12be4a856eed34d0dca7e409598e2acb66d1f1529886cf8e11c60c3.json  query-b84e32c0f35157e20b7af85f26b6d9a276e41c5cdd13d6caf87e20136a669584.json  query-fffef1cb8d9d5e82b4375c0b2c604e84ec5448de47adc5845f71a7da75c13485.json
gateway/src/: cache.rs  database.rs  errors.rs  handlers.rs  main.rs
gateway/src/domain/: error.rs  mod.rs
gateway/src/domain/health/: repository.rs
gateway/src/handlers/: api.rs  context.rs  messenger.rs  mod.rs  state.rs
gateway/src/models/: application.rs  health_check.rs  merchant_channel.rs  merchant_config.rs  messenger_webhook.rs  mod.rs  search_application.rs
gateway/src/repository/: health.rs
gateway/src/services/: cache.rs  custom_response.rs  db.rs  mod.rs
gateway/src/utils/: custom_response.rs  emit_seq.rs  mod.rs
