[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
pem = "3.0.4"
thiserror = "1.0.58"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
lapin = "2.3.1"
futures = "0.3.30"
validator = { version = "0.18.0", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio","postgres", "time", "uuid", "tls-native-tls" ] }
async-trait = "0.1.79"

[profile.release]
codegen-units = 1
lto = true
