[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "cors",  
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "request-id",
    "normalize-path"
] }
pem = "3.0.4"
thiserror = "1.0.58"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
lapin = "2.3.1"
futures = "0.3.30"
validator = { version = "0.18.0", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio","postgres", "time", "uuid", "tls-native-tls" ] }
async-trait = "0.1.79"
axum-macros = "0.4.1"
bytes = "1.6.0"
tracing = "0.1.40"
mime = "0.3.17"
emit = "0.10.0"
hyper = "1.2.0"
hyper-util = "0.1.3"
http-body-util = "0.1.1"
reqwest = {version = "0.12.3",  features = ["blocking"]}
tower-layer = "0.3.2"
moka = { version = "0.12.6", features = ["sync", "future"] }

[dev-dependencies]
mockall = "0.11.3"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "femto"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
